# Algorithm-Exercise

./: CMakeLists.txt
doc/de/benchmark/: benchmark.tex
doc/de/images/graphs/: Insertion-Sort.graphml  mergesort.graphml  quicksort.graphml
doc/de/src/: doc_de.tex  preamble.tex
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  algorithms.hpp  func.cpp  func.h  heapsort.hpp  insertion_sort.hpp  insertionsort.hpp  mergesort.hpp  quicksort.hpp  shellsort.hpp
src/benchmarks/: Benchmark.h  Benchmark.hpp
src/main/: CMakeLists.txt  main.cpp
src/tests/: SorterTest.cpp  SorterTest.h  SorterTest.hpp  TestUtil.h  TestUtil.hpp
tests/: CMakeLists.txt  SorterTest.cpp  SorterTestUtil.h  func_test.cpp  test.cpp
